[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-mafs"
version = "0.0.1"
description = "Reflex custom component mafs"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Tyler", email = "tn3wman@icloud.com" }]
keywords = ["reflex","reflex-custom-components"]

dependencies = ["reflex>=0.7.1"]

classifiers = ["Development Status :: 4 - Beta"]

[project.urls]
homepage = "https://github.com/tn3wman/reflex-mafs"
source = "https://github.com/tn3wman/reflex-mafs"

[project.optional-dependencies]
dev = ["build", "twine"]


[tool.setuptools.packages.find]
where = ["custom_components"]